<resources>
    <string name="app_name">FakeLoginApp</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="login">LOGIN</string>
    <string name="i_have_read_and_agree_the_privacy_policy">I have read and agree the Privacy Policy</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in_sign_up">LOG IN</string>
    <string name="name_sign_up">name</string>
    <string name="for_your_account">FOR YOUR ACCOUNT</string>
    <string name="sign_up_sign_up">SIGN UP</string>
    <string name="email_sign_up">email</string>
    <string name="welcome">Welcome</string>
    <string name="nome_usuario">Nome usuário</string>
    <string name="to_continue">TO CONTINUE</string>
</resources>