<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">


    <TextView
        android:id="@+id/txtTituloSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up_sign_up"
        android:textColor="@color/colorMain"
        android:textSize="34sp"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/txtForYourAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/for_your_account"
        android:textColor="@color/colorMain"
        android:textSize="16sp"
        android:letterSpacing="0.3"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:layout_gravity="center|center_vertical">

        <EditText
            android:id="@+id/etNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_sign_up"
            android:textColor="@color/colorMain"
            android:singleLine="true"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorMain"
            android:backgroundTint="@color/colorMain"/>

        <EditText
            android:id="@+id/etEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_sign_up"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorMain"
            android:backgroundTint="@color/colorMain"
            android:textColor="@color/colorMain"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/etSenhaSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/colorMain"
            android:backgroundTint="@color/colorMain"
            android:textColor="@color/colorMain"
            android:layout_marginTop="20dp"/>

        <CheckBox
            android:id="@+id/checkPoliticaPrivacidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_have_read_and_agree_the_privacy_policy"
            android:textColor="@color/colorMain"
            android:layout_marginTop="25dp"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:background="@color/colorMain"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:layout_marginTop="70dp"
            android:enabled="false"/>

        <Button
            android:id="@+id/btnLoginSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/colorMain"
            android:text="@string/log_in_sign_up"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


</LinearLayout>